// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-fHGsUi eWtzZA"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-fHGsUi eWtzZA"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-fHGsUi eWtzZA"
>
  <span
    className="sc-ihWozo bTAJXS"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-fHGsUi eWtzZA"
>
  <div
    className="sc-lcfOiJ fAVrzs"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-fHGsUi eWtzZA"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-fHGsUi hXHxDa"
  size="small"
/>
`;
